--- a/StackQA/Main.storyboard
+++ b/StackQA/Main.storyboard
@@ -427,6 +427,9 @@
                                         <state key="normal" image="message.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="createComment:" destination="cyX-9e-sgK" eventType="touchUpInside" id="UO7-2t-Zbe"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
